other/dns-policy-and-dns-config/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: change-dns-config-policy
policies:
- ../dns-policy-and-dns-config.yaml
resources:
- resource.yaml
results:
- kind: Pod
  patchedResources:
  - patchedResource.yaml
  policy: change-dns-config-policy
  resources:
  - default/myapp-pod
  result: pass
  rule: dns-policy
variables: variables.yaml
