other/dns-policy-and-dns-config/.kyverno-test/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: change-dns-config-policy
  rules:
  - name: dns-policy
    values:
      dictionary.data.ClusterConfiguration: |
        apiServer:
          certSANs:
          - kubernetes
          - kubernetes.default
          - kubernetes.default.svc
          - kubernetes.default.svc.mycluster
          - 10.233.0.1
          - localhost
          - 127.0.0.1
          - k8s-mycluster-master-1
          - k8s-mycluster-master-2
          - k8s-mycluster-master-3
          - lb-apiserver.kubernetes.local
          - 10.10.88.132
          - 10.10.90.111
          - 10.10.88.50
          - k8s-mycluster-master-1.mycluster
          - k8s-mycluster-master-2.mycluster
          - k8s-mycluster-master-3.mycluster
          extraArgs:
            allow-privileged: "true"
            anonymous-auth: "True"
            apiserver-count: "3"
            audit-log-maxage: "1"
            audit-log-maxbackup: "1"
            audit-log-maxsize: "100"
            audit-log-path: /var/log/audit/kube-apiserver-audit.log
            audit-policy-file: /etc/kubernetes/audit-policy/apiserver-audit-policy.yaml
            authorization-mode: Node,RBAC
            bind-address: 0.0.0.0
            default-not-ready-toleration-seconds: "300"
            default-unreachable-toleration-seconds: "300"
            enable-aggregator-routing: "true"
            endpoint-reconciler-type: lease
            event-ttl: 1h0m0s
            insecure-port: "0"
            kubelet-certificate-authority: /etc/kubernetes/ssl/ca.crt
            kubelet-preferred-address-types: InternalDNS,InternalIP,Hostname,ExternalDNS,ExternalIP
            profiling: "False"
            request-timeout: 1m0s
            service-account-lookup: "True"
            service-cluster-ip-range: 10.233.0.0/18
            service-node-port-range: 30000-32767
            storage-backend: etcd3
          extraVolumes:
          - hostPath: /etc/kubernetes/audit-policy
            mountPath: /etc/kubernetes/audit-policy
            name: audit-policy
          - hostPath: /var/log/kubernetes/audit
            mountPath: /var/log/audit
            name: audit-logs
          - hostPath: /usr/share/ca-certificates
            mountPath: /usr/share/ca-certificates
            name: usr-share-ca-certificates
            readOnly: true
          timeoutForControlPlane: 5m0s
        apiVersion: kubeadm.k8s.io/v1beta3
        certificatesDir: /etc/kubernetes/ssl
        clusterName: mycluster
        controlPlaneEndpoint: 10.10.88.132:6443
        controllerManager:
          extraArgs:
            bind-address: 0.0.0.0
            cluster-cidr: 10.233.64.0/18
            configure-cloud-routes: "false"
            leader-elect-lease-duration: 15s
            leader-elect-renew-deadline: 10s
            node-cidr-mask-size: "25"
            node-monitor-grace-period: 40s
            node-monitor-period: 5s
            profiling: "False"
            service-cluster-ip-range: 10.233.0.0/18
            terminated-pod-gc-threshold: "12500"
        dns:
          imageRepository: registry.mycluster.com//coredns
          imageTag: v1.8.6
        etcd:
          external:
            caFile: /etc/ssl/etcd/ssl/ca.pem
            certFile: /etc/ssl/etcd/ssl/node-k8s-mycluster-master-1.pem
            endpoints:
            - https://10.10.89.133:2379
            - https://10.10.89.197:2379
            - https://10.10.88.98:2379
            keyFile: /etc/ssl/etcd/ssl/node-k8s-mycluster-master-1-key.pem
        imageRepository: registry.mycluster.com/
        kind: ClusterConfiguration
        kubernetesVersion: v1.23.7
        networking:
          dnsDomain: mycluster
          podSubnet: 10.233.64.0/18
          serviceSubnet: 10.233.0.0/18
        scheduler:
          extraArgs:
            bind-address: 0.0.0.0
            config: /etc/kubernetes/kubescheduler-config.yaml
          extraVolumes:
          - hostPath: /etc/kubernetes/kubescheduler-config.yaml
            mountPath: /etc/kubernetes/kubescheduler-config.yaml
            name: kubescheduler-config
            readOnly: true
      request.namespace: default
